# sandpile-sim

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  output.rs  sandpile.rs
