[package]
name = "sandpile-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toodee = "0.3.0"
colored = "2.0.0"
clap = { version = "3.2.17", features = ["derive"] }
png = "0.17.5"
rand = "0.8.5"

